--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ unittest-parametrize = "^1.6.0"
 time-machine = "^2.16.0"
 types-python-dateutil = "^2.9.0.20250708"
 types-gevent = "^25.4.0.20250801"
+pre-commit = "^4.3.0"
 
 
 [tool.pytest.ini_options]
