--- a/apps/betterangels-backend/project.json
+++ b/apps/betterangels-backend/project.json
@@ -143,7 +143,7 @@
         "{workspaceRoot}/coverage/apps/betterangels-backend"
       ],
       "options": {
-        "command": "poetry run python manage.py test",
+        "command": "poetry run pytest",
         "cwd": "apps/betterangels-backend"
       }
     },
