update DatePicker to use control

--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "@types/apollo-upload-client": "^18.0.0",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.14",
-    "@types/node": "^20.0.0",
+    "@types/node": "20.19.9",
     "@types/react": "~19.1.10",
     "@types/react-dom": "~19.1.7",
     "@types/react-mailchimp-subscribe": "^2.1.4",
@@ -181,6 +181,7 @@
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
     "jest-expo": "~54.0.12",
+    "jest-util": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
