feat: shelter card list

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.1",
+    "@chakra-ui/react": "^3.29.0",
     "@config-plugins/react-native-blob-util": "^9.0.0",
     "@config-plugins/react-native-pdf": "^9.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@expo/metro-config": "~0.20.0",
     "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^5.2.1",
@@ -58,6 +61,7 @@
     "expo-status-bar": "~2.2.1",
     "expo-updates": "~0.28.14",
     "expo-web-browser": "~14.2.0",
+    "framer-motion": "^12.23.24",
     "graphql": "^16.9.0",
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
