lint; update env

--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -27,5 +27,7 @@ services:
       - AWS_SECRET_ACCESS_KEY
       - AWS_SESSION_TOKEN
       - INPUT_GITHUB_TOKEN
+      - HMIS_REST_URL
+      - HMIS_HOST
       # App Secrets
       - VITE_SHELTER_GOOGLE_MAPS_API_KEY
