--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@teovilla/react-native-web-maps": "^0.9.5",
     "@types/validator": "^13.15.0",
     "@vis.gl/react-google-maps": "^1.4.2",
-    "apollo-link-rest": "^0.9.0",
     "apollo-upload-client": "^19.0.0",
     "axios": "^1.8.2",
     "clsx": "^2.1.1",
@@ -59,7 +58,6 @@
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
-    "graphql": "^16.9.0",
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
     "jotai": "^2.12.5",
@@ -146,6 +144,7 @@
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react": "16.1.0",
     "@testing-library/react-native": "13.2.0",
+    "@types/apollo-upload-client": "^19.0.0",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.14",
     "@types/node": "^20.0.0",
@@ -210,9 +209,6 @@
     "vitest": "^1.6.1"
   },
   "resolutions": {
-    "cookie": ">=0.7.0",
-    "cross-spawn": ">=7.0.5",
-    "micromatch": ">=4.0.8",
     "react-native-maps": "^1.26.17",
     "react-native-keyboard-controller": "1.19.1",
     "ws": ">=8.17.1",
