review feedback updates

--- a/apps/betterangels-admin/tsconfig.app.json
+++ b/apps/betterangels-admin/tsconfig.app.json
@@ -20,11 +20,5 @@
     "src/**/*.test.jsx",
     "jest.config.ts"
   ],
-  "include": [
-    "src/**/*.js",
-    "src/**/*.jsx",
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "types/**/*.d.ts"
-  ]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
 }
