--- a/libs/expo/betterangels/tsconfig.lib.json
+++ b/libs/expo/betterangels/tsconfig.lib.json
@@ -6,7 +6,7 @@
     "types": ["node"]
   },
   "files": ["../../../node_modules/@nx/expo/typings/svg.d.ts"],
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "jest.config.ts",
     "src/**/*.spec.ts",
