--- a/libs/expo/shared/ui-components/tsconfig.lib.json
+++ b/libs/expo/shared/ui-components/tsconfig.lib.json
@@ -16,5 +16,5 @@
     "**/*.stories.tsx"
   ],
   "files": ["../../../../node_modules/@nx/expo/typings/svg.d.ts"],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "**/*.d.ts"]
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
