--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-native-worklets": "0.5.1",
     "react-router-dom": "6.29.0",
     "remeda": "^2.20.0",
+    "sanitize-html": "^2.17.0",
     "stylus": "github:stylus/stylus#0.54.4",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^2.5.5",
@@ -151,6 +152,7 @@
     "@types/react": "~19.1.10",
     "@types/react-dom": "~19.1.7",
     "@types/react-mailchimp-subscribe": "^2.1.4",
+    "@types/sanitize-html": "^2.16.0",
     "@types/supercluster": "^7.1.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "7.17.0",
