--- a/apps/betterangels-backend/.env.local.sample
+++ b/apps/betterangels-backend/.env.local.sample
@@ -4,7 +4,7 @@
 GOOGLE_MAPS_API_KEY="<your google maps api key>"
 
 # HMIS
-HMIS_TOKEN_KEY="LeUjRutbzg_txpcdszNmKbpX8rFiMWLnpJtPbF2nsS0=" # random 32-byte key for local encryption; not sensitive
+HMIS_TOKEN_KEY="" # 'LeUjRutbzg_txpcdszNmKbpX8rFiMWLnpJtPbF2nsS0' random 32-byte key for local encryption
 HMIS_API_KEY="<HMIS_API_KEY>"
 HMIS_GRAPHQL_URL="<HMIS_GRAPHQL_URL>"
 HMIS_REST_URL="<HMIS_REST_URL>"
