--- a/apps/betterangels-backend/hmis/tests/cassettes/test_create_hmis_program_note_mutation.yaml
+++ b/apps/betterangels-backend/hmis/tests/cassettes/test_create_hmis_program_note_mutation.yaml
@@ -3,14 +3,15 @@ interactions:
     body: '{"clientNote": {"title": "prog note title", "ref_client_program": "525",
       "date": "2011-11-11", "note": "prog note note", "category": {"code": 1}, "ref_category":
       "1", "private": "0", "tracking_hour": null, "tracking_minute": null}, "fields":
-      "note, date, title, client.id, id, last_updated, added_date, ref_client_program"}'
+      "ref_client_program,last_updated,clientProgram.id,title,added_date,clientProgram.program.name,clientProgram.program.id,id,note,date"}'
     headers: {}
     method: POST
     uri: ''
   response:
     body:
-      string: '{"id":480,"title":"prog note title","note":"prog note note","added_date":"2025-11-13
-        00:35:34","last_updated":"2025-11-13 00:35:34","ref_client_program":525,"date":"2011-11-11","client":{"id":388}}'
+      string: '{"id":521,"title":"prog note title","note":"prog note note","added_date":"2025-11-24
+        18:01:19","last_updated":"2025-11-24 18:01:19","ref_client_program":525,"date":"2011-11-11","clientProgram":{"id":525,"program":{"id":2,"name":"Housing
+        Program 01"}}}'
     headers: {}
     status:
       code: 200
