--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dates": "^0.22.47",
-    "react-native-pdf": "patch:react-native-pdf@npm%3A6.7.7#~/.yarn/patches/react-native-pdf-npm-6.7.7-7aa1e3a631.patch",
+    "react-native-pdf": "^7.0.3",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
