--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -96,7 +96,8 @@
     "@graphql-typed-document-node/core": "*",
     "fast-deep-equal": "*",
     "@testing-library/react": "*",
-    "@jest/globals": "*"
+    "@jest/globals": "*",
+    "@expo/metro-config": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
