--- a/package.json
+++ b/package.json
@@ -36,28 +36,28 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "~54.0.25",
+    "expo": "54.0.13",
     "expo-application": "~7.0.7",
     "expo-build-properties": "~1.0.9",
-    "expo-camera": "~17.0.9",
+    "expo-camera": "~17.0.8",
     "expo-clipboard": "~8.0.7",
-    "expo-constants": "~18.0.10",
+    "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
-    "expo-dev-client": "~6.0.18",
+    "expo-dev-client": "~6.0.15",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.9",
-    "expo-image": "~3.0.10",
+    "expo-image": "~3.0.9",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
-    "expo-linking": "~8.0.9",
+    "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
-    "expo-router": "~6.0.15",
+    "expo-router": "~6.0.12",
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.11",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.13",
-    "expo-web-browser": "~15.0.9",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
     "jotai": "^2.12.5",
@@ -69,7 +69,7 @@
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-native": "0.81.5",
+    "react-native": "0.81.4",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
@@ -113,27 +113,27 @@
     "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@iarna/toml": "^2.2.5",
     "@nx-tools/container-metadata": "^6.8.2",
-    "@nx-tools/nx-container": "7.2.0",
-    "@nx/devkit": "22.1.1",
-    "@nx/eslint": "22.1.1",
-    "@nx/eslint-plugin": "22.1.1",
-    "@nx/expo": "22.1.1",
-    "@nx/jest": "22.1.1",
-    "@nx/js": "22.1.1",
-    "@nx/playwright": "22.1.1",
-    "@nx/react": "22.1.1",
-    "@nx/storybook": "22.1.1",
-    "@nx/vite": "22.1.1",
-    "@nx/web": "22.1.1",
-    "@nx/workspace": "22.1.1",
+    "@nx-tools/nx-container": "6.8.2",
+    "@nx/devkit": "21.5.3",
+    "@nx/eslint": "21.5.3",
+    "@nx/eslint-plugin": "21.5.3",
+    "@nx/expo": "21.5.3",
+    "@nx/jest": "21.5.3",
+    "@nx/js": "21.5.3",
+    "@nx/playwright": "21.5.3",
+    "@nx/react": "21.5.3",
+    "@nx/storybook": "21.5.3",
+    "@nx/vite": "21.5.3",
+    "@nx/web": "21.5.3",
+    "@nx/workspace": "21.5.3",
     "@nxlv/python": "21.2.0",
     "@playwright/test": "^1.36.0",
     "@storybook/addon-docs": "9.1.2",
     "@storybook/addon-react-native-web": "^0.0.29",
     "@storybook/react-native": "^9.1.0",
     "@storybook/react-native-web-vite": "^9.1.5",
-    "@storybook/react-vite": "10.0.8",
-    "@storybook/react-webpack5": "10.0.8",
+    "@storybook/react-vite": "9.1.2",
+    "@storybook/react-webpack5": "9.1.2",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -180,20 +180,20 @@
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~54.0.13",
+    "jest-expo": "~54.0.12",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "metro": "^0.83.1",
     "metro-react-native-babel-transformer": "^0.77.0",
-    "nx": "22.1.1",
+    "nx": "21.5.3",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.38",
     "postcss-loader": "^8.1.1",
     "prettier": "^2.6.2",
     "raw-loader": "^4.0.2",
     "react-docgen-typescript": "^2.4.0",
-    "storybook": "10.0.8",
+    "storybook": "9.1.2",
     "storybook-addon-pseudo-states": "9.1.2",
     "swc-loader": "0.1.15",
     "tailwind-merge": "^2.5.5",
