--- a/apps/betterangels/.env
+++ b/apps/betterangels/.env
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_API_URL=https://api.dev.betterangels.la
+# EXPO_PUBLIC_API_URL=https://api.dev.betterangels.la
+EXPO_PUBLIC_API_URL=http://localhost:8000
 EXPO_PUBLIC_DEMO_API_URL=http://localhost:8000
