--- a/apps/betterangels-backend/.env
+++ b/apps/betterangels-backend/.env
@@ -34,7 +34,7 @@ CELERY_REDBEAT_URL=redis://localhost:6379/2
 
 # Site Security
 CSRF_COOKIE_SECURE=False
-CSRF_TRUSTED_ORIGINS=http://localhost:8081,http://localhost:8083
+CSRF_TRUSTED_ORIGINS=http://localhost:8081,http://localhost:8083,http://localhost:8084
 CORS_ALLOW_ALL_ORIGINS=True
 ALLOWED_HOSTS="*"
 LANGUAGE_COOKIE_SECURE=False
