--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -28,7 +28,6 @@
     "expo-constants": "*",
     "expo-updates": "*",
     "newrelic-react-native-agent": "*",
-    "@react-native-cookies/cookies": "*",
     "react-native-maps": "*",
     "@teovilla/react-native-web-maps": "*",
     "@storybook/react-webpack5": "*",
@@ -98,7 +97,8 @@
     "fast-deep-equal": "*",
     "@testing-library/react": "*",
     "@jest/globals": "*",
-    "@expo/metro-config": "*"
+    "@expo/metro-config": "*",
+    "react-native-nitro-cookies": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
