--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@portabletext/react": "^3.2.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "2.11.1",
     "@sanity/client": "^6.27.1",
     "@shopify/flash-list": "2.0.2",
@@ -74,6 +73,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-maps": "1.20.1",
+    "react-native-nitro-cookies": "^1.0.0",
+    "react-native-nitro-modules": "^0.31.10",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dates": "^0.22.47",
