--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "react-native": "0.81.5",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-keyboard-controller": "1.18.5",
-    "react-native-maps": "1.20.1",
+    "react-native-keyboard-controller": "^1.20.2",
+    "react-native-maps": "^1.26.20",
     "react-native-nitro-cookies": "^1.0.0",
     "react-native-nitro-modules": "^0.31.10",
     "react-native-open-maps": "^0.4.3",
@@ -214,8 +214,6 @@
   "resolutions": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native-maps": "^1.26.17",
-    "react-native-keyboard-controller": "1.19.0",
     "ws": ">=8.17.1",
     "@expo/config-plugins": ">=54.0.1"
   },
