add expo.install.exclude for packages that differ from expo install version

--- a/package.json
+++ b/package.json
@@ -211,10 +211,20 @@
     "vitest": "^1.6.1"
   },
   "resolutions": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native-maps": "^1.26.17",
     "react-native-keyboard-controller": "1.19.1",
     "ws": ">=8.17.1",
     "@expo/config-plugins": ">=54.0.1"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native-maps",
+        "react-native-keyboard-controller"
+      ]
+    }
   },
   "engines": {
     "node": "22.21.1"
