--- a/package.json
+++ b/package.json
@@ -36,28 +36,28 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "54.0.13",
-    "expo-application": "~7.0.7",
-    "expo-build-properties": "~1.0.9",
-    "expo-camera": "~17.0.8",
-    "expo-clipboard": "~8.0.7",
-    "expo-constants": "~18.0.9",
-    "expo-crypto": "~15.0.7",
-    "expo-dev-client": "~6.0.15",
-    "expo-document-picker": "~14.0.7",
-    "expo-font": "~14.0.9",
-    "expo-image": "~3.0.9",
-    "expo-image-manipulator": "~14.0.7",
-    "expo-image-picker": "~17.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-location": "~19.0.7",
-    "expo-router": "~6.0.12",
-    "expo-secure-store": "~15.0.7",
-    "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.8",
+    "expo": "^54.0.29",
+    "expo-application": "~7.0.8",
+    "expo-build-properties": "~1.0.10",
+    "expo-camera": "~17.0.10",
+    "expo-clipboard": "~8.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
+    "expo-font": "~14.0.10",
+    "expo-image": "~3.0.11",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.10",
+    "expo-linking": "~8.0.10",
+    "expo-location": "~19.0.8",
+    "expo-router": "~6.0.19",
+    "expo-secure-store": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
+    "expo-web-browser": "~15.0.10",
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
     "jotai": "^2.12.5",
@@ -69,7 +69,7 @@
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
@@ -182,7 +182,7 @@
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~54.0.12",
+    "jest-expo": "~54.0.16",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
@@ -211,10 +211,20 @@
     "vitest": "^1.6.1"
   },
   "resolutions": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native-maps": "^1.26.17",
     "react-native-keyboard-controller": "1.19.1",
     "ws": ">=8.17.1",
     "@expo/config-plugins": ">=54.0.1"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native-maps",
+        "react-native-keyboard-controller"
+      ]
+    }
   },
   "engines": {
     "node": "22.21.1"
