--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@portabletext/react": "^3.2.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-picker/picker": "2.11.1",
     "@sanity/client": "^6.27.1",
     "@shopify/flash-list": "2.0.2",
@@ -72,8 +71,10 @@
     "react-native": "0.81.5",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-keyboard-controller": "1.18.5",
-    "react-native-maps": "1.20.1",
+    "react-native-keyboard-controller": "~1.19.6",
+    "react-native-maps": "^1.26.20",
+    "react-native-nitro-cookies": "^1.0.0",
+    "react-native-nitro-modules": "^0.31.10",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dates": "^0.22.47",
@@ -213,8 +214,6 @@
   "resolutions": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native-maps": "^1.26.17",
-    "react-native-keyboard-controller": "1.19.1",
     "ws": ">=8.17.1",
     "@expo/config-plugins": ">=54.0.1"
   },
