--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "babel-plugin-react-native-web": "^0.19.8",
     "babel-preset-expo": "~54.0.0",
     "babel-preset-vite": "^1.1.3",
+    "baseline-browser-mapping": "^2.9.9",
     "core-js": "3.36.1",
     "daisyui": "^5.0.46",
     "eslint": "8.57.0",
