--- a/apps/shelter-web/tsconfig.app.json
+++ b/apps/shelter-web/tsconfig.app.json
@@ -6,7 +6,8 @@
       "node",
       "@nx/react/typings/cssmodule.d.ts",
       "@nx/react/typings/image.d.ts",
-      "vite/client"
+      "vite/client",
+      "google.maps"
     ]
   },
   "exclude": [
