--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "54.0.9",
+    "expo": "~54.0.30",
     "expo-application": "~7.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
@@ -149,9 +149,9 @@
     "@testing-library/react-native": "13.2.2",
     "@types/apollo-upload-client": "^19.0.0",
     "@types/google.maps": "^3.58.1",
-    "@types/jest": "30.0.0",
+    "@types/jest": "29.5.14",
     "@types/node": "^20.0.0",
-    "@types/react": "19.2.7",
+    "@types/react": "~19.1.10",
     "@types/react-dom": "~19.1.7",
     "@types/react-mailchimp-subscribe": "^2.1.4",
     "@types/sanitize-html": "^2.16.0",
@@ -180,7 +180,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
     "eslint-plugin-storybook": "^9.1.17",
-    "jest": "30.2.0",
+    "jest": "~29.7.0",
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "30.2.0",
     "jest-environment-node": "^29.4.1",
