--- a/apps/storybook-react/.storybook/tsconfig.json
+++ b/apps/storybook-react/.storybook/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "types": ["vite/client", "storybook/react-vite"]
+    "moduleResolution": "bundler",
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
+    "types": ["vite/client"]
   },
   "include": ["**/*.ts", "**/*.tsx"]
 }
