--- a/apps/storybook-react/.eslintrc.json
+++ b/apps/storybook-react/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["../../.eslintrc.json"],
+  "extends": ["../../.eslintrc.json", "plugin:import/recommended"],
   "ignorePatterns": [
     "!**/*",
     "**/vite.config.*.timestamp*",
