--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "jotai": "^2.12.5",
     "libphonenumber-js": "^1.12.6",
     "newrelic-react-native-agent": "^1.5.10",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-fast-compare": "^3.2.2",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
@@ -131,10 +131,10 @@
     "@nx/workspace": "22.3.3",
     "@nxlv/python": "21.2.0",
     "@playwright/test": "^1.36.0",
-    "@storybook/addon-docs": "^9.1.17",
+    "@storybook/addon-docs": "^10.1.1",
     "@storybook/addon-react-native-web": "^0.0.29",
-    "@storybook/react-native": "^9.1.4",
-    "@storybook/react-native-web-vite": "^9.1.17",
+    "@storybook/react-native": "^10.1.1",
+    "@storybook/react-native-web-vite": "^10.1.1",
     "@storybook/react-vite": "10.1.9",
     "@storybook/react-webpack5": "10.1.9",
     "@svgr/webpack": "^8.1.0",
@@ -162,6 +162,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
+    "@yarnpkg/sdks": "^3.1.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "30.2.0",
     "babel-loader": "^10.0.0",
@@ -178,7 +179,7 @@
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
-    "eslint-plugin-storybook": "^9.1.17",
+    "eslint-plugin-storybook": "^10.1.1",
     "jest": "~29.7.0",
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "30.2.0",
