--- a/package.json
+++ b/package.json
@@ -232,5 +232,6 @@
   "engines": {
     "node": "22.21.1"
   },
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.2.2",
+  "type": "module"
 }
