--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "^54.0.29",
+    "expo": "~54.0.30",
     "expo-application": "~7.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
@@ -53,8 +53,8 @@
     "expo-router": "~6.0.19",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
-    "expo-splash-screen": "~31.0.12",
-    "expo-status-bar": "~3.0.9",
+    "expo-splash-screen": "31.0.13",
+    "expo-status-bar": "3.0.9",
     "expo-updates": "~29.0.15",
     "expo-web-browser": "~15.0.10",
     "haversine-distance": "^1.2.3",
@@ -62,8 +62,8 @@
     "jotai": "^2.12.5",
     "libphonenumber-js": "^1.12.6",
     "newrelic-react-native-agent": "^1.5.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-fast-compare": "^3.2.2",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
@@ -84,9 +84,9 @@
     "react-native-screens": "~4.16.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "15.12.1",
-    "react-native-svg-transformer": "1.5.0",
+    "react-native-svg-transformer": "1.5.2",
     "react-native-walkthrough-tooltip": "^1.6.0",
-    "react-native-web": "^0.21.0",
+    "react-native-web": "0.21.2",
     "react-native-worklets": "0.5.1",
     "react-router-dom": "6.29.0",
     "remeda": "^2.20.0",
@@ -105,7 +105,7 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@chromatic-com/storybook": "^4.1.0",
-    "@expo/metro-runtime": "~6.1.2",
+    "@expo/metro-runtime": "6.1.2",
     "@graphql-codegen/cli": "^6.0.1",
     "@graphql-codegen/client-preset": "^4.3.2",
     "@graphql-codegen/near-operation-file-preset": "^3.1.0",
@@ -116,26 +116,27 @@
     "@iarna/toml": "^2.2.5",
     "@nx-tools/container-metadata": "^6.8.2",
     "@nx-tools/nx-container": "6.8.2",
-    "@nx/devkit": "21.5.3",
-    "@nx/eslint": "21.5.3",
-    "@nx/eslint-plugin": "21.5.3",
-    "@nx/expo": "21.5.3",
-    "@nx/jest": "21.5.3",
-    "@nx/js": "21.5.3",
-    "@nx/playwright": "21.5.3",
-    "@nx/react": "21.5.3",
-    "@nx/storybook": "21.5.3",
-    "@nx/vite": "21.5.3",
-    "@nx/web": "21.5.3",
-    "@nx/workspace": "21.5.3",
+    "@nx/devkit": "22.3.3",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/expo": "22.3.3",
+    "@nx/jest": "22.3.3",
+    "@nx/js": "22.3.3",
+    "@nx/playwright": "22.3.3",
+    "@nx/react": "22.3.3",
+    "@nx/storybook": "22.3.3",
+    "@nx/vite": "22.3.3",
+    "@nx/vitest": "22.3.3",
+    "@nx/web": "22.3.3",
+    "@nx/workspace": "22.3.3",
     "@nxlv/python": "21.2.0",
     "@playwright/test": "^1.36.0",
-    "@storybook/addon-docs": "9.1.2",
+    "@storybook/addon-docs": "^10.1.1",
     "@storybook/addon-react-native-web": "^0.0.29",
-    "@storybook/react-native": "^9.1.0",
-    "@storybook/react-native-web-vite": "^9.1.5",
-    "@storybook/react-vite": "9.1.2",
-    "@storybook/react-webpack5": "9.1.2",
+    "@storybook/react-native": "^10.1.1",
+    "@storybook/react-native-web-vite": "^10.1.1",
+    "@storybook/react-vite": "10.1.9",
+    "@storybook/react-webpack5": "10.1.9",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.6.0",
@@ -145,7 +146,7 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react": "16.1.0",
-    "@testing-library/react-native": "13.2.0",
+    "@testing-library/react-native": "13.2.2",
     "@types/apollo-upload-client": "^19.0.0",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.14",
@@ -159,14 +160,14 @@
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.3.1",
-    "@yarnpkg/sdks": "^3.0.0-rc.48",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
+    "@yarnpkg/sdks": "^3.1.1",
     "autoprefixer": "10.4.13",
-    "babel-jest": "29.7.0",
+    "babel-jest": "30.2.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-react-native-web": "^0.19.8",
-    "babel-preset-expo": "~54.0.0",
+    "babel-preset-expo": "54.0.9",
     "babel-preset-vite": "^1.1.3",
     "core-js": "3.36.1",
     "daisyui": "^5.0.46",
@@ -178,26 +179,27 @@
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
-    "eslint-plugin-storybook": "9.1.2",
-    "jest": "29.7.0",
+    "eslint-plugin-storybook": "^10.1.1",
+    "jest": "~29.7.0",
     "jest-circus": "^29.4.1",
-    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-jsdom": "30.2.0",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~54.0.16",
+    "jest-expo": "54.0.16",
+    "jest-util": "30.2.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "metro": "^0.83.1",
     "metro-react-native-babel-transformer": "^0.77.0",
-    "nx": "21.5.3",
+    "nx": "22.3.3",
     "nx-cloud": "19.1.0",
     "postcss": "8.4.38",
     "postcss-loader": "^8.1.1",
     "prettier": "^2.6.2",
     "raw-loader": "^4.0.2",
     "react-docgen-typescript": "^2.4.0",
-    "storybook": "9.1.2",
-    "storybook-addon-pseudo-states": "9.1.2",
+    "storybook": "10.1.9",
+    "storybook-addon-pseudo-states": "^9.1.17",
     "swc-loader": "0.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.17",
@@ -207,11 +209,13 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
-    "vite": "6.3.6",
-    "vite-plugin-svgr": "^4.3.0",
-    "vitest": "^1.6.1"
+    "vite": "^7.3.0",
+    "vite-plugin-svgr": "^4.5.0",
+    "vitest": "4.0.9"
   },
   "resolutions": {
+    "glob": "^10.5.0",
+    "koa": "^3.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "ws": ">=8.17.1",
