add user preference selector for team

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -98,7 +98,8 @@
     "@testing-library/react": "*",
     "@jest/globals": "*",
     "@expo/metro-config": "*",
-    "react-native-nitro-cookies": "*"
+    "react-native-nitro-cookies": "*",
+    "react-native-mmkv": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
