--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "haversine-distance": "^1.2.3",
     "i": "^0.3.7",
     "jotai": "^2.12.5",
+    "jotai-family": "^1.0.1",
     "libphonenumber-js": "^1.12.6",
     "newrelic-react-native-agent": "^1.5.10",
     "react": "19.1.1",
@@ -73,6 +74,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "~1.19.6",
     "react-native-maps": "^1.26.20",
+    "react-native-mmkv": "^4.1.0",
     "react-native-nitro-cookies": "^1.0.0",
     "react-native-nitro-modules": "^0.31.10",
     "react-native-open-maps": "^0.4.3",
