update landing test

--- a/apps/betterangels/.maestro/landing.yml
+++ b/apps/betterangels/.maestro/landing.yml
@@ -10,7 +10,8 @@ platform: ${MAESTRO_PLATFORM}
     commands:
       - tapOn: 'Open'
 
-- assertVisible: 'Get Started'
+- assertVisible: 'Better Angels'
+- assertVisible: 'HMIS'
 - tapOn:
-    id: 'get-started-button'
+    id: 'better-angels-login'
 - assertVisible: 'Welcome!'
