adapt useInfiniteScroll to reac shelter list

--- a/libs/react/shelter/tsconfig.json
+++ b/libs/react/shelter/tsconfig.json
@@ -3,13 +3,15 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "esnext",
+    "moduleResolution": "Bundler",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vite/client"]
   },
   "files": [],
   "include": ["src/**/*.css", "src/**/*.tsx", "src/**/*.ts"],
