--- a/libs/react/shelter/tsconfig.spec.json
+++ b/libs/react/shelter/tsconfig.spec.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["jest", "node"]
+    "module": "esnext",
+    "moduleResolution": "Bundler",
+    "types": ["jest", "node", "vite/client"]
   }
 }
