Add hmis token expiry check

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -103,7 +103,8 @@
     "jotai-family": "*",
     "rxjs": "*",
     "set-cookie-parser": "*",
-    "@types/set-cookie-parser": "*"
+    "@types/set-cookie-parser": "*",
+    "jwt-decode": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
