--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "i": "^0.3.7",
     "jotai": "^2.12.5",
     "jotai-family": "^1.0.1",
+    "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.6",
     "newrelic-react-native-agent": "^1.5.10",
     "react": "19.1.1",
