Properly Clear Credentials on Logout (DEV-2348) (#1832)
* Fix bug

* More cleanup

* Great cleanup

* Fix test

* More cleanup

* More cleanup

* Proper spread

* More cleanup

* Cleanup

* Set-cookie-parser

* Consistent types

* Consolidate credentail clearing

* Add hmis token expiry check

* More cosolidation and validate token on app foreground

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -101,7 +101,10 @@
     "react-native-nitro-cookies": "*",
     "react-native-mmkv": "*",
     "jotai-family": "*",
-    "rxjs": "*"
+    "rxjs": "*",
+    "set-cookie-parser": "*",
+    "@types/set-cookie-parser": "*",
+    "jwt-decode": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
