--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "i": "^0.3.7",
     "jotai": "^2.12.5",
     "jotai-family": "^1.0.1",
+    "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.6",
     "newrelic-react-native-agent": "^1.5.10",
     "react": "19.1.1",
@@ -93,6 +94,7 @@
     "react-router-dom": "6.30.3",
     "remeda": "^2.20.0",
     "sanitize-html": "^2.17.0",
+    "set-cookie-parser": "^2.4.3",
     "stylus": "github:stylus/stylus#0.54.4",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^2.5.5",
@@ -157,6 +159,7 @@
     "@types/react-dom": "~19.1.7",
     "@types/react-mailchimp-subscribe": "^2.1.4",
     "@types/sanitize-html": "^2.16.0",
+    "@types/set-cookie-parser": "^2.4.3",
     "@types/supercluster": "^7.1.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "7.17.0",
